--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <!-- header navbar -->
         <div id="nav" class="navbar navbar-dark fixed-top">
           <div class="container-fluid">
-            <a class="navbar-brand app_name" href="index.html"> 
-                <img src="food.png" alt="app_logo" id="logo"/>Meal App 
+            <a class="navbar-brand app_name" href="index.html">
+              <img src="food.png" alt="app_logo" id="logo" />Meal App
             </a>
             <button
               class="navbar-toggler"
@@ -54,8 +54,12 @@
                   id="offcanvasNavbarLabel"
                   style="color: white"
                 >
-                <i class="fa-sharp fa-solid fa-text fa-beat-fade" id="fav" style="color: #ffffff;">Favourites</i>
-                  
+                  <i
+                    class="fa-sharp fa-solid fa-text fa-beat-fade"
+                    id="fav"
+                    style="color: #ffffff"
+                    >Favourites</i
+                  >
                 </h5>
                 <button
                   type="button"
